Good work on hiding API key(not proud of having to deal with it, should've known this.). Bug on watch app after logged out from iphone, need to kill token label contents.

--- a/Aim! For watchOS/Base.lproj/Interface.storyboard
+++ b/Aim! For watchOS/Base.lproj/Interface.storyboard
@@ -76,6 +76,13 @@
             </objects>
             <point key="canvasLocation" x="34" y="45.769230769230774"/>
         </scene>
+        <!--AimUserNotLoggedInWarningInterfaceController-->
+        <scene sceneID="hvP-eA-Rvg">
+            <objects>
+                <controller identifier="AimUserNotLoggedInWarningInterfaceController" id="nlt-lb-GMO"/>
+            </objects>
+            <point key="canvasLocation" x="178" y="338"/>
+        </scene>
         <!--AimAwardsInterfaceController-->
         <scene sceneID="TbT-bV-o7I">
             <objects>
